@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.2.9.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
+    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Mono.Rocks.Tests\AssemblyInfo.cs" />
     <Compile Include="Mono.Rocks.Tests\BaseRocksFixture.cs" />
+    <Compile Include="Mono.Rocks.Tests\CachedSequenceTest.cs" />
     <Compile Include="Mono.Rocks.Tests\DelegateTest.cs" />
     <Compile Include="Mono.Rocks.Tests\EitherTest.cs" />
     <Compile Include="Mono.Rocks.Tests\EnumerableValueReaderTest.cs" />
